<resources>
    <string name="app_name">Frederiksberg Sportsklinik</string>
    <string name="menu_beskeder">Beskeder</string>
    <string name="menu_kalender">Kalender</string>
    <string name="textinput_hint_besked">Besked</string>
    <string name="menu_booking">Booking</string>
    <string name="Træningsprogrammer">Træningsprogrammer</string>
    <string name="rygoevelser">Rygøvelser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_behandling">Behandling</string>
    <string name="string_traening">Træning</string>
    <string name="string_dig">Dig</string>
    <string name="string_email">E-mail</string>
    <string name="string_adgangskode">Adgangskode</string>
    <string name="string_login">Login</string>
    <string name="string_set_available_hours">Angiv ledige tider</string>
    <string name="menu_bookingkalender">Bookingkalender</string>
    <string name="string_available_hours">Ledige tider</string>
    <string name="string_exceptions">Undtagelser</string>
    <string name="string_choose_weekday">Vælg dag</string>
    <string name="string_time_picker_start_time">Start-tid</string>
    <string name="string_time_picker_end_time">Slut-tid</string>
    <string name="string_confirm">Bekræft</string>
    <string name="string_start_date">Start-dato</string>
    <string name="string_end_date">Slut-dato</string>
    <string-array name="add_time_choice_array">
        <item>Ledig tid</item>
        <item>Undtagelse</item>
    </string-array>

</resources>
