<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendarConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_background"
    android:orientation="vertical"
    tools:context=".view.CalendarFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<!--    hack height    -->
    <com.applandeo.materialcalendarview.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:eventsEnabled="true"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/string_behandling"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/bg_chip_state_list_primary" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/string_traening"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/bg_chip_state_list_accent" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/workoutplanHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Træningsprogrammer"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    <!--        hack min height            -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workoutplanRecyclerView"
        android:nestedScrollingEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
</ScrollView>
</LinearLayout>